--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -36,7 +36,7 @@
 
     <div class="subscribe__information-wrapper">
       <button class="subscribe__icon-button-close" data-modal-close1>
-        <svg class="subscribe__icon-close" width="" height="">
+        <svg class="subscribe__icon-close" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
