--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -4,14 +4,15 @@
 
     <div class="swiper">
       <div class="swiper-wrapper">
+
         <div class="swiper-slide">
           <picture>
             <source
               srcset="
-                ./images/blog/dt/blog3-dt@1x.jpg  1x,
-                ./images/blog/dt/blog3-dt@2x.jpg  2x,
                 ./images/blog/dt/blog3-dt-1x.webp 1x,
-                ./images/blog/dt/blog3-dt-2x.webp 2x
+                ./images/blog/dt/blog3-dt-2x.webp 2x,
+                ./images/blog/dt/blog3-dt@1x.jpg  1x,
+                ./images/blog/dt/blog3-dt@2x.jpg  2x
               "
               type="image/webp"
               media="(max-width:767.98px)"
@@ -38,12 +39,13 @@
               media="(min-width:1280px)"
             />
             <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
+              src="./images/blog/tb/blog3-tb@1x.jpg"
+              alt="blue iris flowers"
               class="blog-foto"
             />
           </picture>
         </div>
+
         <div class="swiper-slide">
           <picture class="swiper-slide">
             <source
@@ -56,7 +58,6 @@
               type="image/webp"
               media="(max-width:767.98px)"
             />
-
             <source
               srcset="
                 ./images/blog/tb/blog2-tb@1x.jpg  1x,
@@ -79,11 +80,12 @@
             />
             <img
               src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
+              alt="leaves for a bouquet"
               class="blog-foto"
             />
           </picture>
         </div>
+
         <div class="swiper-slide">
           <picture class="swiper-slide">
             <source
@@ -118,132 +120,13 @@
               media="(min-width:1280px)"
             />
             <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
+              src="./images/blog/tb/blog1-tb@1x.jpg"
+              alt="orange calla flower"
               class="blog-foto"
             />
           </picture>
         </div>
-        <div class="swiper-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/blog/dt/blog3-dt@1x.jpg  1x,
-                ./images/blog/dt/blog3-dt@2x.jpg  2x,
-                ./images/blog/dt/blog3-dt-1x.webp 1x,
-                ./images/blog/dt/blog3-dt-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:767.98px)"
-            />
 
-            <source
-              srcset="
-                ./images/blog/tb/blog3-tb@1x.jpg  1x,
-                ./images/blog/tb/blog3-tb@2x.jpg  2x,
-                ./images/blog/tb/blog3-tb-1x.webp 1x,
-                ./images/blog/tb/blog3-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
-            />
-            <source
-              srcset="
-                ./images/blog/tb/blog3-tb@1x.jpg  1x,
-                ./images/blog/tb/blog3-tb@2x.jpg  2x,
-                ./images/blog/tb/blog3-tb-1x.webp 1x,
-                ./images/blog/tb/blog3-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(min-width:1280px)"
-            />
-            <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
-              class="blog-foto"
-            />
-          </picture>
-        </div>
-        <div class="swiper-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/blog/dt/blog2-dt@1x.jpg  1x,
-                ./images/blog/dt/blog2-dt@2x.jpg  2x,
-                ./images/blog/dt/blog2-dt-1x.webp 1x,
-                ./images/blog/dt/blog2-dt-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:767.98px)"
-            />
-
-            <source
-              srcset="
-                ./images/blog/tb/blog2-tb@1x.jpg  1x,
-                ./images/blog/tb/blog2-tb@2x.jpg  2x,
-                ./images/blog/tb/blog2-tb-1x.webp 1x,
-                ./images/blog/tb/blog2-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
-            />
-            <source
-              srcset="
-                ./images/blog/tb/blog2-tb@1x.jpg  1x,
-                ./images/blog/tb/blog2-tb@2x.jpg  2x,
-                ./images/blog/tb/blog2-tb-1x.webp 1x,
-                ./images/blog/tb/blog2-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(min-width:1280px)"
-            />
-            <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
-              class="blog-foto"
-            />
-          </picture>
-        </div>
-        <div class="swiper-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/blog/dt/blog1-dt@1x.jpg  1x,
-                ./images/blog/dt/blog1-dt@2x.jpg  2x,
-                ./images/blog/dt/blog1-dt-1x.webp 1x,
-                ./images/blog/dt/blog1-dt-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:767.98px)"
-            />
-
-            <source
-              srcset="
-                ./images/blog/tb/blog1-tb@1x.jpg  1x,
-                ./images/blog/tb/blog1-tb@2x.jpg  2x,
-                ./images/blog/tb/blog1-tb-1x.webp 1x,
-                ./images/blog/tb/blog1-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
-            />
-            <source
-              srcset="
-                ./images/blog/tb/blog1-tb@1x.jpg  1x,
-                ./images/blog/tb/blog1-tb@2x.jpg  2x,
-                ./images/blog/tb/blog1-tb-1x.webp 1x,
-                ./images/blog/tb/blog1-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(min-width:1280px)"
-            />
-            <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
-              alt=""
-              class="blog-foto"
-            />
-          </picture>
-        </div>
         <div class="swiper-slide">
           <picture>
             <source
@@ -279,11 +162,12 @@
             />
             <img
               src="./images/blog/tb/flowers1-tb@1x.jpg"
-              alt=""
+              alt="delicate white anemones"
               class="blog-foto"
             />
           </picture>
         </div>
+
         <div class="swiper-slide">
           <picture>
             <source
@@ -319,11 +203,12 @@
             />
             <img
               src="./images/blog/tb/flowers2-tb@1x.jpg"
-              alt=""
+              alt="delicate bouquet of flowers"
               class="blog-foto"
             />
           </picture>
         </div>
+
         <div class="swiper-slide">
           <picture>
             <source
@@ -359,7 +244,7 @@
             />
             <img
               src="./images/blog/tb/flowers3-tb@1x.jpg"
-              alt=""
+              alt="orange roses"
               class="blog-foto"
             />
           </picture>
