--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -60,7 +60,11 @@
         />
       </picture>
     </div>
-    <button data-modal-open class="hero__btn hero__btn-anim" type="button">
+    <button
+      data-modal-open
+      class="hero__btn hero__btn-anim rotate-90-cw"
+      type="button"
+    >
       <svg class="hero__btn-svg" width="64" height="76">
         <use
           class="hero__btn-svg--md"
