--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -139,6 +139,32 @@
   }
 }
 
+.hero__btn:hover {
+  -webkit-animation: rotate-90-cw 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: rotate-90-cw 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes hero__btn {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+}
+@keyframes rotate-90-cw {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+}
+
 .hero__btn-svg {
   @media screen and (min-width: 768px) {
     width: 145px;
