--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,8 +31,8 @@
         <source
           media="(min-width:1200px)"
           srcset="
-            ./images/hero/hero-dt@2x.webp 2x,
-            ./images/hero/hero-dt@1x.webp 1x
+            ./images/hero/hero-dt@2x.png 2x,
+            ./images/hero/hero-dt@1x.png 1x
           "
           type="image/png"
         />
@@ -55,6 +55,7 @@
         <img
           src="./images/hero/hero-mb@1x.png"
           alt="flower"
+          loading="lazy"
           width="390px"
           height="693px"
         />
