--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -7,13 +7,6 @@
           <picture>
             <source
               srcset="
-                ./images/store/mb/store15$-mb@1x.jpg 1x,
-                ./images/store/mb/store15$-mb@2x.jpg 2x
-              "
-              media="(max-width:767.98px)"
-            />
-            <source
-              srcset="
                 ./images/store/mb/store15$-mb@1x.webp 1x,
                 ./images/store/mb/store15$-mb@2x.webp 2x
               "
@@ -22,10 +15,10 @@
             />
             <source
               srcset="
-                ./images/store/tb/store15$-tb@2x.jpg 1x,
-                ./images/store/tb/store15$-tb@2x.jpg 2x
+                ./images/store/mb/store15$-mb@1x.jpg 1x,
+                ./images/store/mb/store15$-mb@2x.jpg 2x
               "
-              media="(max-width:1279.98px)"
+              media="(max-width:767.98px)"
             />
             <source
               srcset="
@@ -37,10 +30,10 @@
             />
             <source
               srcset="
-                ./images/store/dt/store15$-dt@1x.jpg 1x,
-                ./images/store/dt/store15$-dt@2x.jpg 2x
+                ./images/store/tb/store15$-tb@2x.jpg 1x,
+                ./images/store/tb/store15$-tb@2x.jpg 2x
               "
-              media="(min-width:1280px)"
+              media="(max-width:1279.98px)"
             />
             <source
               srcset="
@@ -50,11 +43,19 @@
               media="(min-width:1280px)"
               type="image/webp"
             />
+            <source
+              srcset="
+                ./images/store/dt/store15$-dt@1x.jpg 1x,
+                ./images/store/dt/store15$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
 
             <img
               src="./images/store/tb/store15$-tb@1x.jpg"
               alt="flower from compliment"
               class="store__img"
+              loading="lazy"
             />
           </picture>
           <h3 class="store__title__item">compliments</h3>
@@ -125,14 +126,6 @@
           <picture>
             <source
               srcset="
-                ./images/store/mb/store45$-mb@1x.jpg 1x,
-                ./images/store/mb/store45$-mb@2x.jpg 2x
-              "
-              media="(max-width:767.98px)"
-              type="image/jpg"
-            />
-            <source
-              srcset="
                 ./images/store/mb/store45$-mb@1x.webp 1x,
                 ./images/store/mb/store45$-mb@2x.webp 2x
               "
@@ -141,10 +134,11 @@
             />
             <source
               srcset="
-                ./images/store/tb/store45$-tb@1x.jpg 1x,
-                ./images/store/tb/store45$-tb@2x.jpg 2x
+                ./images/store/mb/store45$-mb@1x.jpg 1x,
+                ./images/store/mb/store45$-mb@2x.jpg 2x
               "
-              media="(max-width:1279.98px)"
+              media="(max-width:767.98px)"
+              type="image/jpg"
             />
             <source
               srcset="
@@ -156,10 +150,10 @@
             />
             <source
               srcset="
-                ./images/store/dt/store45$-dt@1x.jpg 1x,
-                ./images/store/dt/store45$-dt@2x.jpg 2x
+                ./images/store/tb/store45$-tb@1x.jpg 1x,
+                ./images/store/tb/store45$-tb@2x.jpg 2x
               "
-              media="(min-width:1280px)"
+              media="(max-width:1279.98px)"
             />
             <source
               srcset="
@@ -169,10 +163,18 @@
               media="(min-width:1280px)"
               type="image/webp"
             />
+            <source
+              srcset="
+                ./images/store/dt/store45$-dt@1x.jpg 1x,
+                ./images/store/dt/store45$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
             <img
               src="./images/store/tb/store45$-tb@1x.jpg"
               alt="midle bouquets"
               class="store__img"
+              loading="lazy"
             />
           </picture>
           <h3 class="store__title__item">bouquets size M</h3>
@@ -184,14 +186,6 @@
           <picture>
             <source
               srcset="
-                ./images/store/mb/store60$-mb@1x.jpg 1x,
-                ./images/store/mb/store60$-mb@2x.jpg 2x
-              "
-              media="(max-width:767.98px)"
-              type="image/jpg"
-            />
-            <source
-              srcset="
                 ./images/store/mb/store60$-mb@1x.webp 1x,
                 ./images/store/mb/store60$-mb@2x.webp 2x
               "
@@ -200,10 +194,11 @@
             />
             <source
               srcset="
-                ./images/store/tb/store60$-tb@1x.jpg 1x,
-                ./images/store/tb/store60$-tb@2x.jpg 2x
+                ./images/store/mb/store60$-mb@1x.jpg 1x,
+                ./images/store/mb/store60$-mb@2x.jpg 2x
               "
-              media="(max-width:1279.98px)"
+              media="(max-width:767.98px)"
+              type="image/jpg"
             />
             <source
               srcset="
@@ -215,10 +210,10 @@
             />
             <source
               srcset="
-                ./images/store/dt/store60$-dt@1x.jpg 1x,
-                ./images/store/dt/store60$-dt@2x.jpg 2x
+                ./images/store/tb/store60$-tb@1x.jpg 1x,
+                ./images/store/tb/store60$-tb@2x.jpg 2x
               "
-              media="(min-width:1280px)"
+              media="(max-width:1279.98px)"
             />
             <source
               srcset="
@@ -228,10 +223,18 @@
               media="(min-width:1280px)"
               type="image/webp"
             />
+            <source
+              srcset="
+                ./images/store/dt/store60$-dt@1x.jpg 1x,
+                ./images/store/dt/store60$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
             <img
               src="./images/store/tb/store60$-tb@1x.jpg"
               alt="large bouquets"
               class="store__img"
+              loading="lazy"
             />
           </picture>
           <h3 class="store__title__item">bouquets size L</h3>
