--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -4,44 +4,63 @@
 
     <div class="swiper">
       <div class="swiper-wrapper">
-
         <div class="swiper-slide">
           <picture>
             <source
+              media="(min-width:1280px)"
               srcset="
                 ./images/blog/dt/blog3-dt-1x.webp 1x,
-                ./images/blog/dt/blog3-dt-2x.webp 2x,
-                ./images/blog/dt/blog3-dt@1x.jpg  1x,
-                ./images/blog/dt/blog3-dt@2x.jpg  2x
+                ./images/blog/dt/blog3-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
-            />
-
-            <source
-              srcset="
-                ./images/blog/tb/blog3-tb@1x.jpg  1x,
-                ./images/blog/tb/blog3-tb@2x.jpg  2x,
-                ./images/blog/tb/blog3-tb-1x.webp 1x,
-                ./images/blog/tb/blog3-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
             />
             <source
-              srcset="
-                ./images/blog/tb/blog3-tb@1x.jpg  1x,
-                ./images/blog/tb/blog3-tb@2x.jpg  2x,
-                ./images/blog/tb/blog3-tb-1x.webp 1x,
-                ./images/blog/tb/blog3-tb-2x.webp 2x
-              "
-              type="image/webp"
               media="(min-width:1280px)"
+              srcset="
+                ./images/blog/dt/blog3-dt@1x.jpg 1x,
+                ./images/blog/dt/blog3-dt@2x.jpg 2x
+              "
+              type="image/jpeg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="
+                ./images/blog/tb/blog3-tb-1x.webp 1x,
+                ./images/blog/tb/blog3-tb-2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="
+                ./images/blog/tb/blog3-tb@1x.jpg 1x,
+                ./images/blog/tb/blog3-tb@2x.jpg 2x
+              "
+              type="image/jpeg"
+            />
+            <source
+              media="(max-width:767px)"
+              srcset="
+                ./images/blog/mb/blog3-mb-1x.webp 1x,
+                ./images/blog/mb/blog3-mb-2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(max-width:767px)"
+              srcset="
+                ./images/blog/mb/blog3-mb@1x.jpg 1x,
+                ./images/blog/mb/blog3-mb@2x.jpg 2x
+              "
+              type="image/jpeg"
             />
             <img
-              src="./images/blog/tb/blog3-tb@1x.jpg"
+              src="../images/blog/dt/blog3-dt@1x.jpg"
               alt="blue iris flowers"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
@@ -49,203 +68,269 @@
         <div class="swiper-slide">
           <picture class="swiper-slide">
             <source
+              media="(min-width:1280px)"
               srcset="
-                ./images/blog/dt/blog2-dt@1x.jpg  1x,
-                ./images/blog/dt/blog2-dt@2x.jpg  2x,
                 ./images/blog/dt/blog2-dt-1x.webp 1x,
                 ./images/blog/dt/blog2-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
             />
             <source
-              srcset="
-                ./images/blog/tb/blog2-tb@1x.jpg  1x,
-                ./images/blog/tb/blog2-tb@2x.jpg  2x,
-                ./images/blog/tb/blog2-tb-1x.webp 1x,
-                ./images/blog/tb/blog2-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
-            />
-            <source
-              srcset="
-                ./images/blog/tb/blog2-tb@1x.jpg  1x,
-                ./images/blog/tb/blog2-tb@2x.jpg  2x,
-                ./images/blog/tb/blog2-tb-1x.webp 1x,
-                ./images/blog/tb/blog2-tb-2x.webp 2x
-              "
-              type="image/webp"
               media="(min-width:1280px)"
+              srcset="
+                ./images/blog/dt/blog2-dt@1x.jpg 1x,
+                ./images/blog/dt/blog2-dt@2x.jpg 2x
+              "
+              type="image/jpeg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="
+                ./images/blog/tb/blog2-tb-1x.webp 1x,
+                ./images/blog/tb/blog2-tb-2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="
+                ./images/blog/tb/blog2-tb@1x.jpg 1x,
+                ./images/blog/tb/blog2-tb@2x.jpg 2x
+              "
+              type="image/jpeg"
+            />
+            <source
+              media="(max-width:767px)"
+              srcset="
+                ./images/blog/mb/blog2-mb-1x.webp 1x,
+                ./images/blog/mb/blog2-mb-2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(max-width:767px)"
+              srcset="
+                ./images/blog/mb/blog2-mb@1x.jpg 1x,
+                ./images/blog/mb/blog2-mb@2x.jpg 2x
+              "
+              type="image/jpeg"
             />
             <img
-              src="./images/blog/tb/blog2-tb@1x.jpg"
+              src="./images/blog/dt/blog2-tb@1x.jpg"
               alt="leaves for a bouquet"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
 
         <div class="swiper-slide">
           <picture class="swiper-slide">
-            <source
-              srcset="
-                ./images/blog/dt/blog1-dt@1x.jpg  1x,
-                ./images/blog/dt/blog1-dt@2x.jpg  2x,
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/blog1-dt-1x.webp 1x,
                 ./images/blog/dt/blog1-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
+            />
+            <source media="(max-width:1280px)" srcset="
+                ./images/blog/dt/blog1-dt@1x.jpg 1x,
+                ./images/blog/dt/blog1-dt@2x.jpg 2x
+              "
+              type="image/jpeg"
             />
 
-            <source
-              srcset="
-                ./images/blog/tb/blog1-tb@1x.jpg  1x,
-                ./images/blog/tb/blog1-tb@2x.jpg  2x,
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog1-tb-1x.webp 1x,
                 ./images/blog/tb/blog1-tb-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:1280px)"
             />
-            <source
-              srcset="
-                ./images/blog/tb/blog1-tb@1x.jpg  1x,
-                ./images/blog/tb/blog1-tb@2x.jpg  2x,
-                ./images/blog/tb/blog1-tb-1x.webp 1x,
-                ./images/blog/tb/blog1-tb-2x.webp 2x
+            <source media="(min-width:768px)" srcset="
+                ./images/blog/tb/blog1-tb@1x.jpg 1x,
+                ./images/blog/tb/blog1-tb@2x.jpg 2x
               "
-              type="image/webp"
-              media="(min-width:1280px)"
+              type="image/jpeg"
+            />
+            <source media="(max-width:768px)" srcset="
+            ./images/blog/mb/blog1-mb-1x.webp 1x,
+            ./images/blog/mb/blog1-mb-2x.webp 2x
+          "
+          type="image/webp"
+            />
+            <source media="(max-width:768px)" srcset="
+            ./images/blog/mb/blog1-mb@1x.jpg 1x,
+            ./images/blog/mb/blog1-mb@2x.jpg 2x
+          "
+          type="image/jpeg"
             />
             <img
-              src="./images/blog/tb/blog1-tb@1x.jpg"
+              src="./images/blog/dt/blog1-dt@1x.jpg"
               alt="orange calla flower"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
 
         <div class="swiper-slide">
           <picture>
-            <source
-              srcset="
-                ./images/blog/dt/flowers1-dt@1x.jpg  1x,
-                ./images/blog/dt/flowers1-dt@2x.jpg  2x,
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/flowers1-dt-1x.webp 1x,
                 ./images/blog/dt/flowers1-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
             />
+            <source media="(min-width:1280px)" srcset="
+            ./images/blog/dt/flowers1-dt@1x.jpg  1x,
+            ./images/blog/dt/flowers1-dt@2x.jpg  2x
+          "
+          type="image/jpeg"
+            />
+            <source media="(max-width:768px)" srcset="
+                ./images/blog/tb/flowers1-tb-1x.webp 1x,
+                ./images/blog/tb/flowers1-tb-2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source media="(max-width:768px)" srcset="
+              ./images/blog/tb/flowers1-tb@1x.jpg  1x,
+              ./images/blog/tb/flowers1-tb@2x.jpg  2x
+            "
+            type="image/jpeg"
 
-            <source
-              srcset="
-                ./images/blog/tb/flowers1-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers1-tb@2x.jpg  2x,
-                ./images/blog/tb/flowers1-tb-1x.webp 1x,
-                ./images/blog/tb/flowers1-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
             />
-            <source
-              srcset="
-                ./images/blog/tb/flowers1-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers1-tb@2x.jpg  2x,
-                ./images/blog/tb/flowers1-tb-1x.webp 1x,
-                ./images/blog/tb/flowers1-tb-2x.webp 2x
+            <source media="(max-width:768px)" srcset="
+                ./images/blog/mb/flowers1-mb-1x.webp 1x,
+                ./images/blog/mb/flowers1-mb-2x.webp 2x
               "
               type="image/webp"
-              media="(min-width:1280px)"
+            />
+            <source media="(max-width:768px)" srcset="
+            ./images/blog/mb/flowers1-mb@1x.jpg  1x,
+            ./images/blog/mb/flowers1-mb@2x.jpg  2x
+          "
+          type="image/jpeg"
             />
             <img
-              src="./images/blog/tb/flowers1-tb@1x.jpg"
+              src="./images/blog/dt/flowers1-dt@1x.jpg"
               alt="delicate white anemones"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
 
         <div class="swiper-slide">
           <picture>
-            <source
-              srcset="
-                ./images/blog/dt/flowers2-dt@1x.jpg  1x,
-                ./images/blog/dt/flowers2-dt@2x.jpg  2x,
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/flowers2-dt-1x.webp 1x,
                 ./images/blog/dt/flowers2-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
             />
+            <source media="(min-width:1280px)" srcset="
+                ./images/blog/dt/flowers2-dt@1x.jpg  1x,
+                ./images/blog/dt/flowers2-dt@2x.jpg  2x
+              "
+              type="image/jpeg"
 
-            <source
-              srcset="
-                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers2-tb@2x.jpg  2x,
-                ./images/blog/tb/flowers2-tb-1x.webp 1x,
-                ./images/blog/tb/flowers2-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
             />
-            <source
-              srcset="
-                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers2-tb@2x.jpg  2x,
+            <source media="(max-width:768px)" srcset="
                 ./images/blog/tb/flowers2-tb-1x.webp 1x,
                 ./images/blog/tb/flowers2-tb-2x.webp 2x
               "
               type="image/webp"
-              media="(min-width:1280px)"
+            />
+            <source media="(max-width:768px)" srcset="
+            ./images/blog/mb/flowers2-mb@1x.jpg  1x,
+            ./images/blog/mb/flowers2-mb@2x.jpg  2x
+            "
+              type="image/jpeg"
+            />
+            <source media="(max-width:768px)" srcset="
+                ./images/blog/mb/flowers2-mb-1x.webp 1x,
+                ./images/blog/mb/flowers2-mb-2x.webp 2x
+              "
+              type="image/webp"
+
+            />
+            <source media="(max-width:768px)" srcset="
+                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
+                ./images/blog/tb/flowers2-tb@2x.jpg  2x
+              "
+              type="image/jpeg"
+
             />
             <img
-              src="./images/blog/tb/flowers2-tb@1x.jpg"
+              src="./images/blog/dt/flowers2-dt@1x.jpg"
               alt="delicate bouquet of flowers"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
 
         <div class="swiper-slide">
           <picture>
-            <source
-              srcset="
-                ./images/blog/dt/flowers3-dt@1x.jpg  1x,
-                ./images/blog/dt/flowers3-dt@2x.jpg  2x,
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/flowers3-dt-1x.webp 1x,
                 ./images/blog/dt/flowers3-dt-2x.webp 2x
               "
               type="image/webp"
-              media="(max-width:767.98px)"
-            />
 
-            <source
-              srcset="
-                ./images/blog/tb/flowers3-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers3-tb@2x.jpg  2x,
-                ./images/blog/tb/flowers3-tb-1x.webp 1x,
-                ./images/blog/tb/flowers3-tb-2x.webp 2x
-              "
-              type="image/webp"
-              media="(max-width:1280px)"
             />
-            <source
-              srcset="
-                ./images/blog/tb/flowers3-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers3-tb@2x.jpg  2x,
-                ./images/blog/tb/flowers3-tb-1x.webp 1x,
-                ./images/blog/tb/flowers3-tb-2x.webp 2x
+            <source media="(min-width:1280px)" srcset="
+                ./images/blog/dt/flowers3-dt-1x.webp 1x,
+                ./images/blog/dt/flowers3-dt-2x.webp 2x
               "
-              type="image/webp"
+              type="image/jpeg"
               media="(min-width:1280px)"
             />
+            <source  media="(min-width:768px)" srcset="
+                ./images/blog/tb/flowers3-tb-1x.webp 1x,
+                ./images/blog/tb/flowers3-tb-2x.webp 2x
+              "
+              type="image/webp"
+
+            />
+            <source media="(min-width:768px)" srcset="
+              ./images/blog/tb/flowers3-tb@1x.jpg  1x,
+              ./images/blog/tb/flowers3-tb@2x.jpg  2x
+            "
+            type="image/jpeg"
+
+          />
+            <source media="(max-width:768px)"
+              srcset="
+                ./images/blog/mb/flowers3-mb-1x.webp 1x,
+                ./images/blog/mb/flowers3-mb-2x.webp 2x
+              "
+              type="image/webp"
+
+            />
+            <source media="(max-width:768px)"
+            srcset="
+              ./images/blog/mb/flowers3-mb@1x.jpg  1x,
+              ./images/blog/mb/flowers3-mb@2x.jpg  2x
+            "
+            type="image/jpeg"
+
+          />
             <img
-              src="./images/blog/tb/flowers3-tb@1x.jpg"
+              src="./images/blog/dt/flowers3-dt@1x.jpg"
               alt="orange roses"
               class="blog-foto"
+              loading="lazy"
+              width="315"
+              height="369"
             />
           </picture>
         </div>
@@ -268,14 +353,3 @@
   </div>
 </section>
 
-<!-- <button class="blog__icon-switch2">
-          <svg class="blog__arrow" width="" height="">
-            <use href="./images/symbol-defs.svg#icon-arrow-right"></use>
-          </svg>
-        </button> -->
-
-<!-- <button class="blog__icon-switch1">
-          <svg class="blog__arrow" width="" height="">
-            <use href="./images/symbol-defs.svg#icon-arrow-left"></use>
-          </svg>
-        </button> -->
